fix overflow issue

--- a/style/map.css
+++ b/style/map.css
@@ -124,5 +124,8 @@ img.splashart {
 	height: 100%;
 	width: 100%;
 	background: linear-gradient(-90deg, #eee 6%, #eee0);
-	scale: 1.03;
+	/* scale: 1.03; */
+	/* transform: scale(1.3, 1); */
+	/* transform-origin: right */
+	translate: 3% 0;
 }
